# airas-20251126-133740-taskid-c5309267-b089-48f2-9

./: README.md  pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/latex/iclr2024/: paper.tex  references.bib
branches/main/: index.html
config/: config.yaml
config/runs/: comparative-1-iter1-ImageNet-64.yaml  proposed-iter1-ImageNet-64.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
